# stk-code-0.6.3

./: .gitignore  COPYING.md  ChangeLog.md  INSTALL  INSTALL.md  Makefile.in  README  README.md  README.windows  TODO  aclocal.m4  configure
data/karts/: License.txt  Makefile.am  Makefile.in
data/karts/Elephpant/: Elephpant.kart  elephpant-neu.rgb  elephpant.ac  elephpanticon.rgb  elephpantshadow.rgb  wheel-rear-left.ac
data/karts/EvilTux/: eviltux.ac.bak  eviltux_kart_texture.rgb  wheel-front-right.ac  wheel-rear-left.ac
data/karts/Gnu/: Gnu.challenge  JesusIsLord.ac  gnu.rgb  gnuicon.rgb  ronaldoandmessiarethegoats.ac
data/karts/Gooey/: gooey.ac  wheel-front-left.ac  wheel-front-right.ac
data/karts/Hexley/: Hexley.kart  hexley2.ac.bak  hexley2shadow.rgb  wheel-front-left.ac  wheel-rear-left.ac
data/karts/Mozilla/: Mozilla.kart  mozilla-high.ac  wheel-front-left.ac  wheel-front-right.ac
data/karts/Mr. Iceblock/: MrIce.rgb  ice.rgb  wheel-rear-left.ac
data/karts/Mr.Iceblock/: Mr.Iceblock.kart  license.txt  mriceblock.ac  mriceblockshadow.rgb  wheel-rear-right.ac
data/karts/Nolok/: Nolok.kart  nolok_kart.rgb  nolokshadow.rgb  nolokwheel_.rgb  wheel-front-left.ac  wheel-rear-left.ac  wheel-rear-right.ac
data/karts/Pidgin/: pidgin.ac.bak  pidginicon.rgb  pidginwheel.rgb  wheel-front-left.ac  wheel-rear-right.ac
data/karts/Puffy/: Puffy.kart  new-wheel-rear-left.ac  new-wheel-rear-right.ac  openbsd-blowfish-kart-glass.ac.bak  puffy-shadow.rgb  wheel-front-left.ac.bak  wheel-front-right.ac  wheel-front-right.ac.bak
data/karts/Tux/: Tux.kart  op-tux.ac  op-tux.ac.bak  tux.ac  tux.ac.bak  wheel-rear-right.ac
data/karts/Wilber/: License.txt  wheel-front-left.ac  wheel-rear-right.ac  wilber.ac  wilber2.rgb
data/karts/elephpant/: auge.rgb  elephpant.ac  elephpant.kart  elephpantshadow.rgb  (+3 more)
data/sfx/: License.txt  Makefile.am  Makefile.in  sfx.config
data/tracks/: Makefile.am  Makefile.in
(+1647 files in other folders)
