# data/karts

pkgdatadir= $(datadir)/games/$(PACKAGE)/data/karts

nobase_dist_pkgdata_DATA = $(shell find $(srcdir) -name "materials.dat") \
                           $(shell find $(srcdir) -name "*.rgb") \
                           $(shell find $(srcdir) -name "*.ac") \
                           $(shell find $(srcdir) -name "*.challenge") \
                           $(shell find $(srcdir) -name "*.txt") \
                           $(shell find $(srcdir) -name "*.kart")
