# sfx/

pkgdatadir = $(datadir)/games/$(PACKAGE)/data/sfx

nobase_dist_pkgdata_DATA =  $(shell find $(srcdir) -name "*.wav") \
                            $(shell find $(srcdir) -name "README")\
                            $(shell find $(srcdir) -name "sfx.config") \
                            License.txt
