# data/tracks

pkgdatadir= $(datadir)/games/$(PACKAGE)/data/tracks
nobase_dist_pkgdata_DATA = $(shell find $(srcdir) -name "readme.txt")      \
                           $(shell find $(srcdir) -name "*.track")         \
                           $(shell find $(srcdir) -name "*.drv?")          \
                           $(shell find $(srcdir) -name "*.loc")           \
                           $(shell find $(srcdir) -name "*.ac")            \
                           $(shell find $(srcdir) -name "*.rgb")           \
                           $(shell find $(srcdir) -name "*.challenge")     \
                           $(shell find $(srcdir) -name "materials.dat")   \
                           $(shell find $(srcdir) -name "License.txt")     \
                           $(shell find $(srcdir) -name "Music_license.rtf") \
                           $(shell find $(srcdir) -name "*.music")         \
                           $(shell find $(srcdir) -name "*.ogg")

